compilateurMinCaml/tests/syntax/valid/fsub.ml
print_int (int_of_float (101.1-.2.0))