compilateurMinCaml/tests/syntax/invalid/fmul.ml
print_int (int_of_float (101.1*.))